build/log/idf_py_stderr_output_131989
/home/pi/httptc/main/nvs_store.c: In function 'save_config_to_nvs':
/home/pi/httptc/main/nvs_store.c:8:9: error: implicit declaration of function 'memcpy' [-Wimplicit-function-declaration]
    8 |         memcpy(&temp_bits,&temp,sizeof(temp_bits));
      |         ^~~~~~
/home/pi/httptc/main/nvs_store.c:3:1: note: 'memcpy' is defined in header '<string.h>'; this is probably fixable by adding '#include <string.h>'
    2 | #include "nvs.h"
  +++ |+#include <string.h>
    3 | 
/home/pi/httptc/main/nvs_store.c: In function 'load_config_from_nvs':
/home/pi/httptc/main/nvs_store.c:31:25: error: invalid type argument of unary '*' (have 'int32_t' {aka 'long int'})
   31 |                         *output_delay_ms = output_delay_ms;
      |                         ^~~~~~~~~~~~~~~~
/home/pi/httptc/main/nvs_store.c:33:25: error: invalid type argument of unary '*' (have 'int32_t' {aka 'long int'})
   33 |                         *output_delay_ms = 100; // default
      |                         ^~~~~~~~~~~~~~~~
/home/pi/httptc/main/nvs_store.c:21:12: warning: unused variable 'len' [-Wunused-variable]
   21 |     size_t len;
      |            ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:108: esp-idf/main/CMakeFiles/__idf_main.dir/nvs_store.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/pi/httptc/main/httptc.c: In function 'app_main':
/home/pi/httptc/main/httptc.c:40:5: error: too few arguments to function 'load_config_from_nvs'
   40 |     load_config_from_nvs();
      |     ^~~~~~~~~~~~~~~~~~~~
In file included from /home/pi/httptc/main/httptc.c:3:
/home/pi/httptc/main/nvs_store.h:7:6: note: declared here
    7 | void load_config_from_nvs(float *temp,int *output_delay_ms);
      |      ^~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/httptc.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
